--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="container--main">
 
         <section id="wrapper--hero" class="section--page">
-            <img id="profile-pic" src="./assets/images/my-avatar.jpg">
+            <img id="profile-pic" src="./assets/images/circular_avatar.png">
 
             <div>
                 <h1 id="user-name">MD Hasanuzzaman Priyam</h1>
