--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
             </div>
 
             <div class="card--project">
+                <a href="https://github.com/hasanuzzamanpriyam/LVSMS" target="_blank"><span>🏫
+                    </span>Laravel School Management</a>
+            </div>
+
+            <div class="card--project">
                 <a href="https://github.com/hasanuzzamanpriyam/game-of-life-ebiten" target="_blank"><span>👾 </span>Game
                     of life</a>
             </div>
