--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
             <h2>Side Projects</h2>
 
             <div class="card--project">
+                <a href="https://github.com/hasanuzzamanpriyam/Room-Booking-Filter" target="_blank"><span>☁🔖
+                    </span>Room Booking Filter</a>
+            </div>
+
+            <div class="card--project">
                 <a href="https://github.com/hasanuzzamanpriyam/Districts-Weather" target="_blank"><span>☁️
                     </span>Districts Weather</a>
             </div>
