--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
 
             <div class="line-break"></div>
             <div class="card--work-history">
+                <strong>👨🏽‍💻 Laravel Developer (Remote) | CRID USA/</strong>
+                <p>11/2024 - 02/2025</p>
+
+                <p>Worked on their kambaii Health Admin Panel</p>
+                <p>Managing the blade files for the layout.</p>
+                <p>CRUD functionality for patient records, appointments, doctors, and staffs.</p>
+                <p>Validate and managing relationships between patients, doctors, appointments, and medical reports.</p>
+                <p>Implementing role based access control via laravel.</p>
+                <p>Tested the mobile applications as end user perspective.</p>
+            </div>
+            <div class="line-break"></div>
+            
+            <div class="card--work-history">
                 <strong>👨🏽‍💻 Software Engineer | Ryven.CO</strong>
                 <p>03/2024 - 08/2024</p>
 
