--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <div class="line-break"></div>
             <div class="card--work-history">
-                <strong>👨🏽‍💻 Laravel Developer (Remote) | CRID USA/</strong>
+                <strong>👨🏽‍💻 Laravel Developer (Remote) | CRID USA</strong>
                 <p>11/2024 - 02/2025</p>
 
                 <p>Worked on their kambaii Health Admin Panel</p>
