--- a/index.html
+++ b/index.html
@@ -112,7 +112,12 @@
             <h2>Side Projects</h2>
 
             <div class="card--project">
-                <a href="https://github.com/hasanuzzamanpriyam/Room-Booking-Filter" target="_blank"><span>☁🔖
+                <a href="https://github.com/hasanuzzamanpriyam/Hotel-Booking" target="_blank"><span>🏨
+                    </span>Booking-Hotel</a>
+            </div>
+
+            <div class="card--project">
+                <a href="https://github.com/hasanuzzamanpriyam/Room-Booking-Filter" target="_blank"><span>🏡
                     </span>Room Booking Filter</a>
             </div>
 
