--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
             <h2>Side Projects</h2>
 
             <div class="card--project">
+                <a href="https://github.com/hasanuzzamanpriyam/Movie_Reservation_System_Api" target="_blank"><span>🏨
+                    </span>Movie Reservation API</a>
+            </div>
+
+            <div class="card--project">
                 <a href="https://github.com/hasanuzzamanpriyam/Hotel-Booking" target="_blank"><span>🏨
                     </span>Booking-Hotel</a>
             </div>
