--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
 
             <div class="line-break"></div>
             <div class="card--work-history">
+                <strong>👨🏽‍💻 Web Developer (Onsite) | MediSeba</strong>
+                <p>02/2025 - Present</p>
+
+                <p>Developed and maintained MediShop (e-commerce) and MediSeba (healthcare service) websites.</p>
+                <p>Add new user-friendly features.</p>
+                <p>payment gateway integration, appointment booking system, real-time chat to enhance functionality.</p>
+                <p>website speed by optimizing code, reducing load time, and implementing caching strategies.</p>
+                <p>API Integration Integrated third-party APIs as payment gateways, SMS/email services, Google Maps for seamless functionality.</p>
+                <p>Bug Fixing & Maintenance Regularly debugged for issues.</p>
+            </div>
+
+            <div class="line-break"></div>
+            <div class="card--work-history">
                 <strong>👨🏽‍💻 Software Engineer (Remote) | CRID USA</strong>
                 <p>11/2024 - 02/2025</p>
 
