--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <h2>Tech stack</h2>
 
             <div id="wrapper--techstack__items">
-                <div class="card--techstack"><span>PHP, Golang, Python</span></div>
-                <div class="card--techstack"><span>Laravel, Fiber, Flask</span></div>
+                <div class="card--techstack"><span>JavaScript, PHP, Golang, Python</span></div>
+                <div class="card--techstack"><span>jQuery, React, Laravel, Fiber, Flask</span></div>
                 <div class="card--techstack"><span>MySQL, PostgreSql, MongoDB</span></div>
             </div>
         </section>
