--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="section--page">
             <h2>Skills & Qualifications</h2>
             <ul id="qualifications--list">
-                <li>✔️ 1 Year of learning experience with web app development.</li>
+                <li>✔️ 1+ Year of learning experience with web app development.</li>
                 <li>✔️ Extensive knowledge in Backend & RESTful API development.</li>
                 <li>✔️ Problem solver & creative thinker. </li>
                 <li>✔️ Comprehensive knowledge on frontend.</li>
