--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <div>
                 <h1 id="user-name">MD Hasanuzzaman Priyam</h1>
-                <p id="bio">Software Engineer | Web Developer</p>
+                <p id="bio">Software Engineer</p>
                 <p id="email">📧 h.priyam1999@gmail.com</p>
             </div>
         </section>
