--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <div id="wrapper--techstack__items">
                 <div class="card--techstack"><span>JavaScript, PHP, Golang, Python</span></div>
-                <div class="card--techstack"><span>jQuery, React, Laravel, Fiber, Flask</span></div>
+                <div class="card--techstack"><span>jQuery, Ajax, React, Laravel, Fiber, Flask</span></div>
                 <div class="card--techstack"><span>MySQL, PostgreSql, MongoDB</span></div>
             </div>
         </section>
